[gd_scene load_steps=14 format=3 uid="uid://ctta0f0jc65x4"]

[ext_resource type="Script" path="res://Objects/bush.gd" id="1_e8pb7"]
[ext_resource type="Texture2D" uid="uid://3ss0uvrhbjvw" path="res://Art/World of Solaria Demo Pack Update 04/16x16/Tilesets/New/Bush.png" id="2_2b4h3"]
[ext_resource type="PackedScene" uid="uid://cnmjcmacwy81p" path="res://Objects/shadow_manager.tscn" id="3_ulico"]
[ext_resource type="PackedScene" uid="uid://dwr8yl8hr8xas" path="res://Objects/interaction_area.tscn" id="3_v2bux"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_10qjm"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dq32a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8s4vw"]
atlas = ExtResource("2_2b4h3")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a14k"]
atlas = ExtResource("2_2b4h3")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxt51"]
atlas = ExtResource("2_2b4h3")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kswxm"]
atlas = ExtResource("2_2b4h3")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_btn2u"]
atlas = ExtResource("2_2b4h3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq76h"]
atlas = ExtResource("2_2b4h3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qod4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s4vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a14k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxt51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kswxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s4vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a14k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxt51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kswxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s4vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a14k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxt51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kswxm")
}],
"loop": false,
"name": &"burning",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btn2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq76h")
}],
"loop": true,
"name": &"idle",
"speed": 0.5
}]

[node name="bush" type="StaticBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_e8pb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_10qjm")

[node name="interaction_area" parent="." instance=ExtResource("3_v2bux")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_area"]
visible = false
shape = SubResource("RectangleShape2D_dq32a")

[node name="shadow_manager" parent="." instance=ExtResource("3_ulico")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4qod4")
animation = &"idle"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
